# OpenCV-GStreamer-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: decklink_pipeline.txt  gstreamer_pipeline.txt
src/: main.cpp
src/argument_parser/: argument_parser.cpp  argument_parser.h
src/global_image/: global_image.cpp  global_image.h
src/pipeline_creator/: pipeline_creator.cpp  pipeline_creator.h
src/video_capture/: video_capture.cpp  video_capture.h
src/video_processor/: video_processor.cpp  video_processor.h
